--- a/sites/all/themes/corporateclean/css/mobile.css
+++ b/sites/all/themes/corporateclean/css/mobile.css
@@ -27,8 +27,7 @@
 
 /* Start Customization */
 body {
-overflow: hidden;
-    width: 100%;
+  width: 100%;
 }
 .logo-home-icon {
 	display:none;
@@ -126,4 +125,12 @@ ul.navList li > ul.mobileMenu li a {
     padding: 0 5px;
     resize: none;
     width: 100% !important;
+}
+.footer {
+    border-top: 1px solid #0C82DA;
+    margin-left: 199px;
+    margin-top: 4px;
+    overflow: hidden;
+    padding: 10px;
+    width: auto !important;
 }
